# fil-peggy

./: .gitattributes  .gitignore  .rusty-hook.toml  Cargo.toml  README.md
.github/workflows/: test.yml
actor/: Cargo.toml
actor/src/: lib.rs
app/src/: lib.rs
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
extension/: package.json  vue.config.js
extension/public/: index.html
extension/src/: manifest.development.json  manifest.production.json
extension/src/components/: accountitem.vue  contractitem.vue  header.vue  mainitem.vue  mineritem.vue  networkitem.vue  toolbar.vue
extension/src/const/: account_used_for.js  blockchain_def.js  contract_types.js  global_events.js  store_keys.js
extension/src/entry/: background.js  devtools.js  popup.js
extension/src/evbus/: event_bus.js
extension/src/filapi/: filapi.js  sign.js  wallet.js
extension/src/pages/: custodycontracts.vue  filecoinaccounts.vue  home.vue  investmentshares.vue  mycontract.vue  myminer.vue  settings.vue  storageproviders.vue
extension/src/router/: router.js
extension/src/store/: store.js
extension/src/utils/: activity_dir.js  amount_display.js  power_display.js  time_display.js
extension/src/view/: devtools.vue  options.vue  popup.vue
extension/src/web3/: peggy.js  web3.js
gasestimator/: Cargo.toml
gasestimator/src/: lib.rs
logger/: Cargo.toml
logger/src/: lib.rs
miner/: Cargo.toml
miner/src/: lib.rs
mpool/: Cargo.toml
mpool/src/: lib.rs
peggy/: Cargo.toml  README.md  main.rs
peggy/actor/: Cargo.toml
peggy/app/: Cargo.toml
peggy/app/src/: lib.rs
peggy/cli/: Cargo.toml
peggy/logger/: Cargo.toml
peggy/logger/src/: lib.rs
peggy/miner/src/: lib.rs
peggy/rpc/src/: lib.rs
peggy/send/src/: lib.rs
rpc/: Cargo.toml
rpc/src/: lib.rs
send/: Cargo.toml
send/src/: lib.rs
state/: Cargo.toml
state/src/: lib.rs
wallet/: Cargo.toml
wallet/src/: lib.rs
