[package]
name = "peggy"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
  "app",
  "cli",
  "wallet",
  "miner",
  "actor",
  "rpc",
  "state",
  "logger",
  "mpool",
  "gasestimator",
  "send",
]

[[bin]]
name = "peggy"
path = "peggy/main.rs"

[dependencies.tokio]
version = "1.22.0"
features = ["macros"]

[workspace.dependencies]
app          = { path = "./app" }
cli          = { path = "./cli" }
wallet       = { path = "./wallet" }
miner        = { path = "./miner" }
rpc          = { path = "./rpc" }
state        = { path = "./state" }
logger       = { path = "./logger" }
mpool        = { path = "./mpool" }
gasestimator = { path = "./gasestimator" }
send         = { path = "./send" }
clap         = { version = "4.0.27", features = ["derive"] }
thiserror    = { version = "1.0.37" }
anyhow       = { version = "1.0.66" }

[dependencies.app]
workspace = true

[dependencies.clap]
workspace = true

[dependencies.anyhow]
workspace = true
