[package]
name = "peggy"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
  "app",
  "cli",
  "wallet",
  "miner",
  "actor",
  "rpc",
  "state",
  "logger",
  "mpool",
  "gasestimator",
  "send",
]

[[bin]]
name = "peggy"
path = "peggy/main.rs"

[workspace.dependencies]
app            = { path = "./app" }
cli            = { path = "./cli" }
wallet         = { path = "./wallet" }
miner          = { path = "./miner" }
rpc            = { path = "./rpc" }
state          = { path = "./state" }
logger         = { path = "./logger" }
mpool          = { path = "./mpool" }
gasestimator   = { path = "./gasestimator" }
send           = { path = "./send" }
clap           = { version = "4.0.27", features = ["derive"] }
thiserror      = { version = "1.0.37" }
anyhow         = { version = "1.0.66" }
figlet-rs      = { version =  "0.1.4" }
terminal-menu  = { version =  "2.0.4" }
tokio          = { version = "1.22.0", features = ["macros"] }
crossterm      = { version = "0.23.2" }
log            = { version = "0.4.17" }
url            = { version = "2.3.1" }

[dependencies.app]
workspace = true

[dependencies.clap]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.tokio]
workspace = true

[dependencies.logger]
workspace = true
