[package]
name = "actor"
version = "0.1.0"
edition = "2021"

[dependencies.serde_json]
workspace = true

[dependencies.hex]
workspace = true

[dependencies.fil_actor_power]
workspace = true

[dependencies.libp2p]
workspace = true

[dependencies.fvm_ipld_encoding]
workspace = true

[dependencies.clap]
workspace = true

[dependencies.scanf]
workspace = true

[dependencies.colored]
workspace = true

[dependencies.forest_key_management]
workspace = true

[dependencies.forest_json]
workspace = true

[dependencies.forest_message]
workspace = true

[dependencies.forest_rpc-api]
workspace = true

[dependencies.fil_actors_runtime]
workspace = true

[dependencies.fvm_shared]
workspace = true

[dependencies.reqwest]
workspace = true

[dependencies.jsonrpc-v2]
workspace = true

[dependencies.url]
workspace = true

[dependencies.git2]
workspace = true

[dependencies.thiserror]
workspace = true

[dependencies.cargo]
workspace = true

[dependencies.dirs]
workspace = true

[dependencies.anyhow]
workspace = true
