[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = "0.49.0"
hex = "0.4.3"
serde_json = "1.0.89"
log = "0.4.17"

[dependencies.clap]
version = "4.0.26"
features = [ "derive" ]

[dependencies.scanf]
version = "1.2.1"

[dependencies.colored]
version = "2.0.0"

[dependencies.forest_key_management]
version = "0.2.0"
git = "https://github.com/ChainSafe/forest.git"

[dependencies.fvm_shared]
version = "2.0.0"
features = [ "arb" ]

[dependencies.wallet]
workspace = true

[dependencies.miner]
workspace = true

[dependencies.rpc]
workspace = true
