[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = "0.49.0"
hex = "0.4.3"
serde_json = "1.0.89"
fil_actor_power = "9.0.1"
thiserror = "1.0.37"
anyhow = "1.0.66"

[dependencies.clap]
workspace = true

[dependencies.scanf]
version = "1.2.1"

[dependencies.colored]
version = "2.0.0"

[dependencies.forest_key_management]
version = "0.2.0"
git = "https://github.com/ChainSafe/forest.git"

[dependencies.forest_ipld]
version = "0.2.0"
git = "https://github.com/ChainSafe/forest.git"

[dependencies.fvm_shared]
version = "2.0.0"
features = [ "arb" ]

[dependencies.wallet]
workspace = true

[dependencies.miner]
workspace = true

[dependencies.send]
workspace = true

[dependencies.rpc]
workspace = true

[dependencies.state]
workspace = true

[dependencies.logger]
workspace = true

[dependencies.figlet-rs]
workspace = true

[dependencies.libipld-core]
version = "0.15"
features = ["serde-codec"]

[dependencies.terminal-menu]
workspace = true

[dependencies.crossterm]
workspace = true

[dependencies.log]
workspace = true

[dependencies.url]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.chrono]
workspace = true

[dependencies.serde_with]
workspace = true
