[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies.libp2p]
workspace = true

[dependencies.hex]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.fil_actor_power]
workspace = true

[dependencies.thiserror]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.clap]
workspace = true

[dependencies.scanf]
workspace = true

[dependencies.colored]
workspace = true

[dependencies.forest_key_management]
workspace = true

[dependencies.forest_ipld]
workspace = true

[dependencies.fvm_shared]
workspace = true

[dependencies.forest_json]
workspace = true

[dependencies.wallet]
workspace = true

[dependencies.miner]
workspace = true

[dependencies.send]
workspace = true

[dependencies.rpc]
workspace = true

[dependencies.state]
workspace = true

[dependencies.logger]
workspace = true

[dependencies.figlet-rs]
workspace = true

[dependencies.libipld-core]
workspace = true

[dependencies.terminal-menu]
workspace = true

[dependencies.crossterm]
workspace = true

[dependencies.log]
workspace = true

[dependencies.url]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.chrono]
workspace = true

[dependencies.serde_with]
workspace = true

[dependencies.git2]
workspace = true

[dependencies.actor]
workspace = true

[dependencies.resolve-path]
workspace = true
