[package]
name = "gasestimator"
version = "0.1.0"
edition = "2021"

[dependencies]
fvm_shared = "2.0.0"
thiserror = "1.0.37"
serde_json = "1.0.89"

[dependencies.forest_rpc-api]
version = "0.2.0"
git = "https://github.com/ChainSafe/forest.git"

[dependencies.forest_json]
version = "0.2.0"
git = "https://github.com/ChainSafe/forest.git"

[dependencies.rpc]
workspace = true
