[package]
name = "gasestimator"
version = "0.1.0"
edition = "2021"

[dependencies.fvm_shared]
workspace = true

[dependencies.thiserror]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.forest_rpc-api]
workspace = true

[dependencies.forest_json]
workspace = true

[dependencies.rpc]
workspace = true
