[package]
name = "miner"
version = "0.1.0"
edition = "2021"

[dependencies]
fil_actor_power = "9.0.1"
libp2p = "0.49.0"
fvm_ipld_encoding = "0.2.2"

[dependencies.forest_key_management]
version = "0.2.0"
git = "https://github.com/ChainSafe/forest.git"

[dependencies.forest_json]
version = "0.2.0"
git = "https://github.com/ChainSafe/forest.git"

[dependencies.forest_message]
version = "0.8.0"
git = "https://github.com/ChainSafe/forest.git"

[dependencies.forest_rpc-api]
version = "0.2.0"
git = "https://github.com/ChainSafe/forest.git"

[dependencies.fil_actors_runtime]
version = "10.0.0-alpha.1"
git = "https://github.com/filecoin-project/builtin-actors.git"

[dependencies.fvm_shared]
version = "2.0.0"
features = [ "arb" ]

[dependencies.reqwest]
version = "0.11.13"
features = [ "blocking", "json" ]

[dependencies.rpc]
workspace = true
