[package]
name = "miner"
version = "0.1.0"
edition = "2021"

[dependencies.libp2p]
workspace = true

[dependencies.hex]
workspace = true

[dependencies.fil_actor_power]
workspace = true

[dependencies.thiserror]
workspace = true

[dependencies.fvm_ipld_encoding]
workspace = true

[dependencies.forest_key_management]
workspace = true

[dependencies.forest_json]
workspace = true

[dependencies.fil_actors_runtime]
workspace = true

[dependencies.fvm_shared]
workspace = true

[dependencies.rpc]
workspace = true

[dependencies.mpool]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.state]
workspace = true

[dependencies.serde_json]
workspace = true
