[package]
name = "mpool"
version = "0.1.0"
edition = "2021"

[dependencies]
fvm_ipld_encoding = "0.2.2"
thiserror = "1.0.37"
fvm_shared = "2.0.0"
serde = "1.0.147"
anyhow = "1.0.66"

[dependencies.forest_key_management]
version = "0.2.0"
git = "https://github.com/ChainSafe/forest.git"

[dependencies.forest_json]
version = "0.2.0"
git = "https://github.com/ChainSafe/forest.git"

[dependencies.forest_message]
version = "0.8.0"
git = "https://github.com/ChainSafe/forest.git"

[dependencies.forest_rpc-api]
version = "0.2.0"
git = "https://github.com/ChainSafe/forest.git"

[dependencies.rpc]
workspace = true

[dependencies.gasestimator]
workspace = true
