[package]
name = "rpc"
version = "0.1.0"
edition = "2021"

[dependencies.serde_json]
workspace = true

[dependencies.url]
workspace = true

[dependencies.log]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.thiserror]
workspace = true

[dependencies.jsonrpc-v2]
workspace = true

[dependencies.reqwest]
workspace = true

