[package]
name = "send"
version = "0.1.0"
edition = "2021"

[dependencies.fvm_shared]
workspace = true

[dependencies.thiserror]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.mpool]
workspace = true

[dependencies.forest_key_management]
workspace = true

[dependencies.forest_json]
workspace = true

[dependencies.rpc]
workspace = true

[dependencies.state]
workspace = true
