[package]
name = "state"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.147"
serde_json = "1.0.89"
fvm_shared = "2.0.0"
thiserror = "1.0.37"

[dependencies.forest_json]
version = "0.2.0"
git = "https://github.com/ChainSafe/forest.git"

[dependencies.rpc]
workspace = true

[dependencies.forest_rpc-api]
version = "0.2.0"
git = "https://github.com/ChainSafe/forest.git"

[dependencies.forest_blocks]
version = "0.2.0"
git = "https://github.com/ChainSafe/forest.git"

[dependencies.forest_ipld]
version = "0.2.0"
git = "https://github.com/ChainSafe/forest.git"



