[package]
name = "state"
version = "0.1.0"
edition = "2021"

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.fvm_shared]
workspace = true

[dependencies.thiserror]
workspace = true

[dependencies.libipld-core]
workspace = true

[dependencies.log]
workspace = true

[dependencies.forest_json]
workspace = true

[dependencies.rpc]
workspace = true

[dependencies.forest_rpc-api]
workspace = true

[dependencies.forest_blocks]
workspace = true

[dependencies.forest_ipld]
workspace = true



