[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

[dependencies.hex]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.thiserror]
workspace = true

[dependencies.num-bigint]
workspace = true

[dependencies.forest_key_management]
workspace = true

[dependencies.forest_rpc-api]
workspace = true

[dependencies.fvm_shared]
workspace = true

[dependencies.rpc]
workspace = true

